--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <!-- I compressed the image img/profilepic.jpg using Optimizilla.
+      Original image was 15 KB.
+      Compressed the image to 1.9 KB which reduced it by 87%.
+    Image is now in img folder as img/profilepic-min.jpg -->
+      <a href="/"><img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -39,25 +43,44 @@
       <div class="content">
         <ul>
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
+            <!-- I downloaded the image at this link (https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100)
+            and compressed it using Optimizilla.
+            Original image was 4.20 KB.
+            Compressed the image to 2.7 KB which reduced it by 36%.
+          Image is now in img folder as img/project-2048-img-min.jpg -->
+            <img src="img/project-2048-img-min.jpg">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
+            <!-- I downloaded the image at this link (https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100)
+            and compressed it using Optimizilla.
+            Original image was 3.56 KB.
+            Compressed the image to 3.2 KB which reduced it by 36%.
+          Image is now in img folder as img/project-webperf-img-min.jpg -->
+            <img src="img/project-webperf-img-min.jpg">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
+            <!-- I downloaded the image at this link (https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100)
+            and compressed it using Optimizilla.
+            Original image was 4.89 KB or 3.6.
+            Compressed the image to 2.7 KB which reduced it by 26%.
+          Image is now in img folder as img/project-mobile-img-min.jpg -->
+            <img src="img/project-mobile-img-min.jpg">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <!-- I compressed the image views/images/pizzeria.jpg using Optimizilla.
+            Original image was 2.3M.
+            Compressed the image to 63 KB which reduced it by 97%.
+          Image is now in image folder as views/images/pizzeria-min.jpg -->
+            <img style="width: 100px;" src="views/images/pizzeria-min.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
