--- a/project-2048.html
+++ b/project-2048.html
@@ -27,7 +27,11 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <!-- I compressed the image img/profilepic.jpg using Optimizilla.
+      Original image was 15 KB.
+      Compressed the image to 1.9 KB which reduced it by 87%.
+    Image is now in img folder as img/profilepic-min.jpg -->
+      <a href="/"><img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -37,8 +41,11 @@
       </div>
 
       <div class="content">
-
-        <img class="img-responsive" src="img/2048.png">
+        <!-- I compressed the image img/2048.png using Optimizilla.
+        Original image was 64 KB.
+        Compressed the image to 17 KB which reduced it by 73%.
+      Image is now in img folder as img/2048-min.png -->
+        <img class="img-responsive" src="img/2048-min.png">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
