--- a/project-mobile.html
+++ b/project-mobile.html
@@ -27,7 +27,11 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <!-- I compressed the image img/profilepic.jpg using Optimizilla.
+      Original image was 15 KB.
+      Compressed the image to 1.9 KB which reduced it by 87%.
+    Image is now in img folder as img/profilepic-min.jpg -->
+      <a href="/"><img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -39,8 +43,11 @@
       <div class="content">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
-
-        <img src="img/mobilewebdev.jpg">
+        <!-- I compressed the image img/mobilewebdev.jpg using Optimizilla.
+        Original image was 187 KB.
+        Compressed the image to 37 KB which reduced it by 80%.
+      Image is now in img folder as img/mobilewebdev-min.jpg -->
+        <img src="img/mobilewebdev-min.jpg">
 
         <p>Venison spare ribs dolor tri-tip duis turkey. Ut chicken proident ribeye est flank, sed frankfurter. Kielbasa exercitation ullamco leberkas. Landjaeger turkey culpa, tail short loin consectetur salami venison in corned beef eiusmod qui ad leberkas. Tri-tip adipisicing frankfurter ut sirloin rump consectetur. Chuck sint filet mignon labore eiusmod nulla. Venison shankle pork, consectetur nisi bacon spare ribs anim meatball sausage ball tip labore aute reprehenderit adipisicing.</p>
 
