--- a/project-webperf.html
+++ b/project-webperf.html
@@ -27,7 +27,11 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
+      <!-- I compressed the image img/profilepic.jpg using Optimizilla.
+      Original image was 15 KB.
+      Compressed the image to 1.9 KB which reduced it by 87%.
+    Image is now in img folder as img/profilepic-min.jpg -->
+      <a href="/"><img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -39,8 +43,11 @@
       <div class="content">
 
         <p>Thanks to everyone at Udacity and Google who made this class happen! Now for a very true meme and some <strike>lorem</strike> bacon ipsum.</p>
-
-        <img src="img/cam_be_like.jpg">
+        <!-- I compressed the image img/cam_be_like.jpg using Optimizilla.
+        Original image was 262 KB.
+        Compressed the image to 49 KB which reduced it by 82%.
+      Image is now in img folder as img/cam_be_like-min.jpg -->
+        <img src="img/cam_be_like-min.jpg">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
