--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   -->
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <!-- This specifically states that this file will only be rendered if the media = print.
+    Essentially, this means that print.css will only be used if the site user requests to print the webpage.
+  -->
+  <link href="css/print.css" rel="stylesheet" media="print">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -96,7 +99,7 @@
     </div>
 
     <!-- This allows me to use the Web Font Loader.
-    This gives me the power to ensure that the font 
+    This gives me the power to ensure that the font
     loads asynchronously so that it does not render block.-->
     <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
