--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   -->
   <link href="css/print.css" rel="stylesheet" media="print">
 
+    <!-- For optimization purposes, I have commented out the JavaScript.
+  Instead, I have moved it to the bottom of the body section.-->
+  <!--
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -35,6 +38,7 @@
     </script>
     <script src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
+  -->
   </head>
 
   <style>
@@ -168,6 +172,19 @@
       }
     });
     </script>
+
+    <script>
+      (function(w,g){w['GoogleAnalyticsObject']=g;
+      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
+
+      // Optional TODO: replace with your Google Analytics profile ID.
+      ga('create', 'UA-XXXX-Y');
+      ga('send', 'pageview');
+    </script>
+
+    <script src="http://www.google-analytics.com/analytics.js"></script>
+    
+    <script async src="js/perfmatters.js"></script>
 
   </body>
 </html>
