--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       ga('send', 'pageview');
     </script>
 
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     
     <script async src="js/perfmatters.js"></script>
 
