--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       ga('send', 'pageview');
     </script>
     <script src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <script async src="js/perfmatters-min.js"></script>
   -->
   </head>
 
@@ -183,8 +183,8 @@
     </script>
 
     <script async src="http://www.google-analytics.com/analytics.js"></script>
-    
-    <script async src="js/perfmatters.js"></script>
+
+    <script async src="js/perfmatters-min.js"></script>
 
   </body>
 </html>
